cosmos/clusters/prod/apps/personal-website/all.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: personal-website
---
apiVersion: v1
kind: Service
metadata:
  namespace: personal-website
  name: personal-website
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: personal-website
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: personal-website
  name: personal-website
  labels:
    app: personal-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: personal-website
  template:
    metadata:
      labels:
        app: personal-website
    spec:
      containers:
        - name: personal-website
          image: ghcr.io/incognito124/personal-website:1765575059 # {"$imagepolicy": "flux-system:incognito124-personal-website-policy"} 
          ports:
            - name: web
              containerPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: personal-website
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`msmetko.xyz`)
      kind: Rule
      middlewares:
        - name: wsc2025-redirectregex
      services:
        - name: personal-website
          port: 80
  tls:
    certResolver: letsencrypt
---
# redirect to the Google form for the feedback for WSC2025 workshop
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: wsc2025-redirectregex
  namespace: personal-website
spec:
  redirectRegex:
    regex: ^https?://msmetko.xyz/wsc2025-feedback$
    replacement: https://forms.gle/6JKANYBypzFE5eA29
